; ModuleID = '/home/carl/AnghaBench/linux/net/can/j1939/extr_transport.c_j1939_session_deactivate_activate_next.c'
source_filename = "/home/carl/AnghaBench/linux/net/can/j1939/extr_transport.c_j1939_session_deactivate_activate_next.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.j1939_session = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.j1939_session*)* @j1939_session_deactivate_activate_next to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @j1939_session_deactivate_activate_next(%struct.j1939_session* %0) #0 {
  %2 = alloca %struct.j1939_session*, align 8
  store %struct.j1939_session* %0, %struct.j1939_session** %2, align 8
  %3 = load %struct.j1939_session*, %struct.j1939_session** %2, align 8
  %4 = call i64 @j1939_session_deactivate(%struct.j1939_session* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.j1939_session*, %struct.j1939_session** %2, align 8
  %8 = call i32 @j1939_sk_queue_activate_next(%struct.j1939_session* %7)
  br label %9

9:                                                ; preds = %6, %1
  ret void
}

declare dso_local i64 @j1939_session_deactivate(%struct.j1939_session*) #1

declare dso_local i32 @j1939_sk_queue_activate_next(%struct.j1939_session*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
